--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url = "https://myt1907-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai"
-sentiment_analyzer_url= "https://sentianalyzer.1jnk0mmzeqfk.us-south.codeengine.appdomain.cloud/"
+sentiment_analyzer_url= "https://sentianalyzer.1jp62t6p6x95.us-south.codeengine.appdomain.cloud/"
